Compiler2/y.output
   0  $accept : PROGRAM $end

   1  PROGRAM : LIST

   2  LIST : LIST FUNCTION
   3       | LIST CLASSDEF
   4       |

   5  $$1 :

   6  FUNCTION : FUNCTION_PREFIX LF $$1 STMTLIST RF

   7  $$2 :

   8  FUNCTION_PREFIX : FUNCTION_TYPE ID $$2 LP PARAMLIST RP

   9  FUNCTION_TYPE : VOID
  10                | DATA_TYPE

  11  DATA_TYPE : INT
  12            | CHAR
  13            | FLOAT
  14            | STRING
  15            | INT MUL
  16            | CHAR MUL

  17  $$3 :

  18  PARAMLIST : PARAM $$3 COMMA PARAMLIST
  19            | PARAM
  20            |

  21  PARAM : DATA_TYPE ID

  22  STMTLIST : STMT STMTLIST
  23           |

  24  CLASSDEF : CLASS ID LF CLASSBODY RF

  25  CLASSBODY : CLASSBODY CLASSMEMBER
  26            |

  27  CLASSMEMBER : ACCESS_MODIFIER DATA_TYPE ID SCOL
  28              | ACCESS_MODIFIER FUNCTION
  29              |

  30  ACCESS_MODIFIER : PUBLIC
  31                  | PRIVATE
  32                  | PROTECTED

  33  STMT : DECLARATION SCOL
  34       | ASSIGNMENT SCOL
  35       | EXPR SCOL
  36       | RETURN_STMT SCOL
  37       | IF_STMT
  38       | WHILE_STMT
  39       | FOR_STMT
  40       | BREAK SCOL
  41       | CONTINUE SCOL
  42       | INPUT LP ID RP SCOL
  43       | INPUT LP ID LB EXPR RB RP SCOL
  44       | OUTPUT LP EXPR RP SCOL

  45  DECLARATION : DATA_TYPE ID
  46              | DATA_TYPE ID ASSIGN EXPR
  47              | STRING ID ASSIGN STR
  48              | DATA_TYPE ID LB INT_NUM RB

  49  $$4 :

  50  DECLARATION : DATA_TYPE ID LB INT_NUM RB ASSIGN $$4 LF ARR_VALUES RF

  51  $$5 :

  52  ARR_VALUES : CONST $$5 COMMA ARR_VALUES
  53             | CONST

  54  RETURN_STMT : RETURN EXPR
  55              | RETURN

  56  EXPR : EXPR ADD EXPR
  57       | EXPR SUB EXPR
  58       | EXPR MUL EXPR
  59       | EXPR DIV EXPR
  60       | EXPR EQ EXPR
  61       | EXPR NE EXPR
  62       | EXPR LT EXPR
  63       | EXPR GT EXPR
  64       | EXPR LE EXPR
  65       | EXPR GE EXPR
  66       | EXPR AND EXPR
  67       | EXPR OR EXPR
  68       | EXPR BITAND EXPR
  69       | EXPR BITOR EXPR
  70       | UNARY_EXPR
  71       | PRIMARY_EXPR
  72       | POSTFIX_EXPR

  73  POSTFIX_EXPR : FUNCTION_CALL
  74               | ID LB EXPR RB

  75  UNARY_EXPR : UNARY_OP PRIMARY_EXPR

  76  PRIMARY_EXPR : ID
  77               | CONST
  78               | LP EXPR RP

  79  UNARY_OP : ADD
  80           | SUB
  81           | NEG

  82  CONST : INT_NUM
  83        | FLOAT_NUM
  84        | CHARACTER

  85  ASSIGNMENT : ID ASSIGN EXPR
  86             | ID LB EXPR RB ASSIGN EXPR

  87  $$6 :

  88  $$7 :

  89  $$8 :

  90  $$9 :

  91  IF_STMT : IF $$6 LP EXPR RP $$7 LF $$8 STMTLIST RF $$9 ELIF_STMT ELSE_STMT

  92  $$10 :

  93  $$11 :

  94  $$12 :

  95  $$13 :

  96  ELIF_STMT : ELSE IF $$10 LP EXPR RP $$11 LF $$12 STMTLIST RF $$13 ELIF_STMT
  97            |

  98  $$14 :

  99  ELSE_STMT : ELSE LF $$14 STMTLIST RF

 100  $$15 :

 101  $$16 :

 102  $$17 :

 103  WHILE_STMT : WHILE $$15 LP EXPR RP $$16 LF $$17 STMTLIST RF

 104  $$18 :

 105  $$19 :

 106  $$20 :

 107  $$21 :

 108  FOR_STMT : FOR LP ASSIGNMENT SCOL $$18 EXPR SCOL $$19 ASSIGNMENT RP $$20 LF $$21 STMTLIST RF

 109  $$22 :

 110  FUNCTION_CALL : ID $$22 LP ARGUMENTLIST RP

 111  ARGUMENTLIST : ARG COMMA ARGUMENTLIST
 112               | ARG
 113               |

 114  ARG : EXPR

state 0
	$accept : . PROGRAM $end  (0)
	LIST : .  (4)

	.  reduce 4

	PROGRAM  goto 1
	LIST  goto 2


state 1
	$accept : PROGRAM . $end  (0)

	$end  accept


state 2
	PROGRAM : LIST .  (1)
	LIST : LIST . FUNCTION  (2)
	LIST : LIST . CLASSDEF  (3)

	INT  shift 3
	CHAR  shift 4
	FLOAT  shift 5
	STRING  shift 6
	VOID  shift 7
	CLASS  shift 8
	$end  reduce 1

	FUNCTION  goto 9
	FUNCTION_PREFIX  goto 10
	DATA_TYPE  goto 11
	CLASSDEF  goto 12
	FUNCTION_TYPE  goto 13


state 3
	DATA_TYPE : INT .  (11)
	DATA_TYPE : INT . MUL  (15)

	MUL  shift 14
	ID  reduce 11


state 4
	DATA_TYPE : CHAR .  (12)
	DATA_TYPE : CHAR . MUL  (16)

	MUL  shift 15
	ID  reduce 12


state 5
	DATA_TYPE : FLOAT .  (13)

	.  reduce 13


state 6
	DATA_TYPE : STRING .  (14)

	.  reduce 14


state 7
	FUNCTION_TYPE : VOID .  (9)

	.  reduce 9


state 8
	CLASSDEF : CLASS . ID LF CLASSBODY RF  (24)

	ID  shift 16
	.  error


state 9
	LIST : LIST FUNCTION .  (2)

	.  reduce 2


state 10
	FUNCTION : FUNCTION_PREFIX . LF $$1 STMTLIST RF  (6)

	LF  shift 17
	.  error


state 11
	FUNCTION_TYPE : DATA_TYPE .  (10)

	.  reduce 10


state 12
	LIST : LIST CLASSDEF .  (3)

	.  reduce 3


state 13
	FUNCTION_PREFIX : FUNCTION_TYPE . ID $$2 LP PARAMLIST RP  (8)

	ID  shift 18
	.  error


state 14
	DATA_TYPE : INT MUL .  (15)

	.  reduce 15


state 15
	DATA_TYPE : CHAR MUL .  (16)

	.  reduce 16


state 16
	CLASSDEF : CLASS ID . LF CLASSBODY RF  (24)

	LF  shift 19
	.  error


state 17
	FUNCTION : FUNCTION_PREFIX LF . $$1 STMTLIST RF  (6)
	$$1 : .  (5)

	.  reduce 5

	$$1  goto 20


state 18
	FUNCTION_PREFIX : FUNCTION_TYPE ID . $$2 LP PARAMLIST RP  (8)
	$$2 : .  (7)

	.  reduce 7

	$$2  goto 21


state 19
	CLASSDEF : CLASS ID LF . CLASSBODY RF  (24)
	CLASSBODY : .  (26)

	.  reduce 26

	CLASSBODY  goto 22


state 20
	FUNCTION : FUNCTION_PREFIX LF $$1 . STMTLIST RF  (6)
	STMTLIST : .  (23)

	INT  shift 3
	CHAR  shift 4
	FLOAT  shift 5
	STRING  shift 23
	RETURN  shift 24
	INPUT  shift 25
	OUTPUT  shift 26
	IF  shift 27
	WHILE  shift 28
	FOR  shift 29
	BREAK  shift 30
	CONTINUE  shift 31
	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 34
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	RF  reduce 23

	DATA_TYPE  goto 40
	STMTLIST  goto 41
	STMT  goto 42
	DECLARATION  goto 43
	ASSIGNMENT  goto 44
	EXPR  goto 45
	RETURN_STMT  goto 46
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	IF_STMT  goto 51
	WHILE_STMT  goto 52
	FOR_STMT  goto 53
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 21
	FUNCTION_PREFIX : FUNCTION_TYPE ID $$2 . LP PARAMLIST RP  (8)

	LP  shift 56
	.  error


22: shift/reduce conflict (shift 57, reduce 29) on PUBLIC
22: shift/reduce conflict (shift 58, reduce 29) on PRIVATE
22: shift/reduce conflict (shift 59, reduce 29) on PROTECTED
22: shift/reduce conflict (shift 60, reduce 29) on RF
state 22
	CLASSDEF : CLASS ID LF CLASSBODY . RF  (24)
	CLASSBODY : CLASSBODY . CLASSMEMBER  (25)
	CLASSMEMBER : .  (29)

	PUBLIC  shift 57
	PRIVATE  shift 58
	PROTECTED  shift 59
	RF  shift 60

	CLASSMEMBER  goto 61
	ACCESS_MODIFIER  goto 62


23: shift/reduce conflict (shift 63, reduce 14) on ID
state 23
	DATA_TYPE : STRING .  (14)
	DECLARATION : STRING . ID ASSIGN STR  (47)

	ID  shift 63


state 24
	RETURN_STMT : RETURN . EXPR  (54)
	RETURN_STMT : RETURN .  (55)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	SCOL  reduce 55

	EXPR  goto 65
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 25
	STMT : INPUT . LP ID RP SCOL  (42)
	STMT : INPUT . LP ID LB EXPR RB RP SCOL  (43)

	LP  shift 66
	.  error


state 26
	STMT : OUTPUT . LP EXPR RP SCOL  (44)

	LP  shift 67
	.  error


state 27
	IF_STMT : IF . $$6 LP EXPR RP $$7 LF $$8 STMTLIST RF $$9 ELIF_STMT ELSE_STMT  (91)
	$$6 : .  (87)

	.  reduce 87

	$$6  goto 68


state 28
	WHILE_STMT : WHILE . $$15 LP EXPR RP $$16 LF $$17 STMTLIST RF  (103)
	$$15 : .  (100)

	.  reduce 100

	$$15  goto 69


state 29
	FOR_STMT : FOR . LP ASSIGNMENT SCOL $$18 EXPR SCOL $$19 ASSIGNMENT RP $$20 LF $$21 STMTLIST RF  (108)

	LP  shift 70
	.  error


state 30
	STMT : BREAK . SCOL  (40)

	SCOL  shift 71
	.  error


state 31
	STMT : CONTINUE . SCOL  (41)

	SCOL  shift 72
	.  error


state 32
	CONST : INT_NUM .  (82)

	.  reduce 82


state 33
	CONST : FLOAT_NUM .  (83)

	.  reduce 83


state 34
	POSTFIX_EXPR : ID . LB EXPR RB  (74)
	PRIMARY_EXPR : ID .  (76)
	ASSIGNMENT : ID . ASSIGN EXPR  (85)
	ASSIGNMENT : ID . LB EXPR RB ASSIGN EXPR  (86)
	FUNCTION_CALL : ID . $$22 LP ARGUMENTLIST RP  (110)
	$$22 : .  (109)

	ASSIGN  shift 73
	LB  shift 74
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	EQ  reduce 76
	NE  reduce 76
	LT  reduce 76
	GT  reduce 76
	LE  reduce 76
	GE  reduce 76
	AND  reduce 76
	OR  reduce 76
	SCOL  reduce 76
	LP  reduce 109
	BITAND  reduce 76
	BITOR  reduce 76

	$$22  goto 75


state 35
	UNARY_OP : ADD .  (79)

	.  reduce 79


state 36
	UNARY_OP : SUB .  (80)

	.  reduce 80


state 37
	PRIMARY_EXPR : LP . EXPR RP  (78)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 76
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 38
	CONST : CHARACTER .  (84)

	.  reduce 84


state 39
	UNARY_OP : NEG .  (81)

	.  reduce 81


state 40
	DECLARATION : DATA_TYPE . ID  (45)
	DECLARATION : DATA_TYPE . ID ASSIGN EXPR  (46)
	DECLARATION : DATA_TYPE . ID LB INT_NUM RB  (48)
	DECLARATION : DATA_TYPE . ID LB INT_NUM RB ASSIGN $$4 LF ARR_VALUES RF  (50)

	ID  shift 77
	.  error


state 41
	FUNCTION : FUNCTION_PREFIX LF $$1 STMTLIST . RF  (6)

	RF  shift 78
	.  error


state 42
	STMTLIST : STMT . STMTLIST  (22)
	STMTLIST : .  (23)

	INT  shift 3
	CHAR  shift 4
	FLOAT  shift 5
	STRING  shift 23
	RETURN  shift 24
	INPUT  shift 25
	OUTPUT  shift 26
	IF  shift 27
	WHILE  shift 28
	FOR  shift 29
	BREAK  shift 30
	CONTINUE  shift 31
	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 34
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	RF  reduce 23

	DATA_TYPE  goto 40
	STMTLIST  goto 79
	STMT  goto 42
	DECLARATION  goto 43
	ASSIGNMENT  goto 44
	EXPR  goto 45
	RETURN_STMT  goto 46
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	IF_STMT  goto 51
	WHILE_STMT  goto 52
	FOR_STMT  goto 53
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 43
	STMT : DECLARATION . SCOL  (33)

	SCOL  shift 80
	.  error


state 44
	STMT : ASSIGNMENT . SCOL  (34)

	SCOL  shift 81
	.  error


state 45
	STMT : EXPR . SCOL  (35)
	EXPR : EXPR . ADD EXPR  (56)
	EXPR : EXPR . SUB EXPR  (57)
	EXPR : EXPR . MUL EXPR  (58)
	EXPR : EXPR . DIV EXPR  (59)
	EXPR : EXPR . EQ EXPR  (60)
	EXPR : EXPR . NE EXPR  (61)
	EXPR : EXPR . LT EXPR  (62)
	EXPR : EXPR . GT EXPR  (63)
	EXPR : EXPR . LE EXPR  (64)
	EXPR : EXPR . GE EXPR  (65)
	EXPR : EXPR . AND EXPR  (66)
	EXPR : EXPR . OR EXPR  (67)
	EXPR : EXPR . BITAND EXPR  (68)
	EXPR : EXPR . BITOR EXPR  (69)

	ADD  shift 82
	SUB  shift 83
	MUL  shift 84
	DIV  shift 85
	EQ  shift 86
	NE  shift 87
	LT  shift 88
	GT  shift 89
	LE  shift 90
	GE  shift 91
	AND  shift 92
	OR  shift 93
	SCOL  shift 94
	BITAND  shift 95
	BITOR  shift 96
	.  error


state 46
	STMT : RETURN_STMT . SCOL  (36)

	SCOL  shift 97
	.  error


state 47
	EXPR : UNARY_EXPR .  (70)

	.  reduce 70


state 48
	EXPR : PRIMARY_EXPR .  (71)

	.  reduce 71


state 49
	UNARY_EXPR : UNARY_OP . PRIMARY_EXPR  (75)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 98
	LP  shift 37
	CHARACTER  shift 38
	.  error

	PRIMARY_EXPR  goto 99
	CONST  goto 50


state 50
	PRIMARY_EXPR : CONST .  (77)

	.  reduce 77


state 51
	STMT : IF_STMT .  (37)

	.  reduce 37


state 52
	STMT : WHILE_STMT .  (38)

	.  reduce 38


state 53
	STMT : FOR_STMT .  (39)

	.  reduce 39


state 54
	POSTFIX_EXPR : FUNCTION_CALL .  (73)

	.  reduce 73


state 55
	EXPR : POSTFIX_EXPR .  (72)

	.  reduce 72


state 56
	FUNCTION_PREFIX : FUNCTION_TYPE ID $$2 LP . PARAMLIST RP  (8)
	PARAMLIST : .  (20)

	INT  shift 3
	CHAR  shift 4
	FLOAT  shift 5
	STRING  shift 6
	RP  reduce 20

	DATA_TYPE  goto 100
	PARAMLIST  goto 101
	PARAM  goto 102


state 57
	ACCESS_MODIFIER : PUBLIC .  (30)

	.  reduce 30


state 58
	ACCESS_MODIFIER : PRIVATE .  (31)

	.  reduce 31


state 59
	ACCESS_MODIFIER : PROTECTED .  (32)

	.  reduce 32


state 60
	CLASSDEF : CLASS ID LF CLASSBODY RF .  (24)

	.  reduce 24


state 61
	CLASSBODY : CLASSBODY CLASSMEMBER .  (25)

	.  reduce 25


state 62
	CLASSMEMBER : ACCESS_MODIFIER . DATA_TYPE ID SCOL  (27)
	CLASSMEMBER : ACCESS_MODIFIER . FUNCTION  (28)

	INT  shift 3
	CHAR  shift 4
	FLOAT  shift 5
	STRING  shift 6
	VOID  shift 7
	.  error

	FUNCTION  goto 103
	FUNCTION_PREFIX  goto 10
	DATA_TYPE  goto 104
	FUNCTION_TYPE  goto 13


state 63
	DECLARATION : STRING ID . ASSIGN STR  (47)

	ASSIGN  shift 105
	.  error


state 64
	POSTFIX_EXPR : ID . LB EXPR RB  (74)
	PRIMARY_EXPR : ID .  (76)
	FUNCTION_CALL : ID . $$22 LP ARGUMENTLIST RP  (110)
	$$22 : .  (109)

	LB  shift 106
	ADD  reduce 76
	SUB  reduce 76
	MUL  reduce 76
	DIV  reduce 76
	EQ  reduce 76
	NE  reduce 76
	LT  reduce 76
	GT  reduce 76
	LE  reduce 76
	GE  reduce 76
	AND  reduce 76
	OR  reduce 76
	SCOL  reduce 76
	COMMA  reduce 76
	LP  reduce 109
	RP  reduce 76
	RB  reduce 76
	BITAND  reduce 76
	BITOR  reduce 76

	$$22  goto 75


state 65
	RETURN_STMT : RETURN EXPR .  (54)
	EXPR : EXPR . ADD EXPR  (56)
	EXPR : EXPR . SUB EXPR  (57)
	EXPR : EXPR . MUL EXPR  (58)
	EXPR : EXPR . DIV EXPR  (59)
	EXPR : EXPR . EQ EXPR  (60)
	EXPR : EXPR . NE EXPR  (61)
	EXPR : EXPR . LT EXPR  (62)
	EXPR : EXPR . GT EXPR  (63)
	EXPR : EXPR . LE EXPR  (64)
	EXPR : EXPR . GE EXPR  (65)
	EXPR : EXPR . AND EXPR  (66)
	EXPR : EXPR . OR EXPR  (67)
	EXPR : EXPR . BITAND EXPR  (68)
	EXPR : EXPR . BITOR EXPR  (69)

	ADD  shift 82
	SUB  shift 83
	MUL  shift 84
	DIV  shift 85
	EQ  shift 86
	NE  shift 87
	LT  shift 88
	GT  shift 89
	LE  shift 90
	GE  shift 91
	AND  shift 92
	OR  shift 93
	BITAND  shift 95
	BITOR  shift 96
	SCOL  reduce 54


state 66
	STMT : INPUT LP . ID RP SCOL  (42)
	STMT : INPUT LP . ID LB EXPR RB RP SCOL  (43)

	ID  shift 107
	.  error


state 67
	STMT : OUTPUT LP . EXPR RP SCOL  (44)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 108
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 68
	IF_STMT : IF $$6 . LP EXPR RP $$7 LF $$8 STMTLIST RF $$9 ELIF_STMT ELSE_STMT  (91)

	LP  shift 109
	.  error


state 69
	WHILE_STMT : WHILE $$15 . LP EXPR RP $$16 LF $$17 STMTLIST RF  (103)

	LP  shift 110
	.  error


state 70
	FOR_STMT : FOR LP . ASSIGNMENT SCOL $$18 EXPR SCOL $$19 ASSIGNMENT RP $$20 LF $$21 STMTLIST RF  (108)

	ID  shift 111
	.  error

	ASSIGNMENT  goto 112


state 71
	STMT : BREAK SCOL .  (40)

	.  reduce 40


state 72
	STMT : CONTINUE SCOL .  (41)

	.  reduce 41


state 73
	ASSIGNMENT : ID ASSIGN . EXPR  (85)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 113
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 74
	POSTFIX_EXPR : ID LB . EXPR RB  (74)
	ASSIGNMENT : ID LB . EXPR RB ASSIGN EXPR  (86)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 114
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 75
	FUNCTION_CALL : ID $$22 . LP ARGUMENTLIST RP  (110)

	LP  shift 115
	.  error


state 76
	EXPR : EXPR . ADD EXPR  (56)
	EXPR : EXPR . SUB EXPR  (57)
	EXPR : EXPR . MUL EXPR  (58)
	EXPR : EXPR . DIV EXPR  (59)
	EXPR : EXPR . EQ EXPR  (60)
	EXPR : EXPR . NE EXPR  (61)
	EXPR : EXPR . LT EXPR  (62)
	EXPR : EXPR . GT EXPR  (63)
	EXPR : EXPR . LE EXPR  (64)
	EXPR : EXPR . GE EXPR  (65)
	EXPR : EXPR . AND EXPR  (66)
	EXPR : EXPR . OR EXPR  (67)
	EXPR : EXPR . BITAND EXPR  (68)
	EXPR : EXPR . BITOR EXPR  (69)
	PRIMARY_EXPR : LP EXPR . RP  (78)

	ADD  shift 82
	SUB  shift 83
	MUL  shift 84
	DIV  shift 85
	EQ  shift 86
	NE  shift 87
	LT  shift 88
	GT  shift 89
	LE  shift 90
	GE  shift 91
	AND  shift 92
	OR  shift 93
	RP  shift 116
	BITAND  shift 95
	BITOR  shift 96
	.  error


state 77
	DECLARATION : DATA_TYPE ID .  (45)
	DECLARATION : DATA_TYPE ID . ASSIGN EXPR  (46)
	DECLARATION : DATA_TYPE ID . LB INT_NUM RB  (48)
	DECLARATION : DATA_TYPE ID . LB INT_NUM RB ASSIGN $$4 LF ARR_VALUES RF  (50)

	ASSIGN  shift 117
	LB  shift 118
	SCOL  reduce 45


state 78
	FUNCTION : FUNCTION_PREFIX LF $$1 STMTLIST RF .  (6)

	.  reduce 6


state 79
	STMTLIST : STMT STMTLIST .  (22)

	.  reduce 22


state 80
	STMT : DECLARATION SCOL .  (33)

	.  reduce 33


state 81
	STMT : ASSIGNMENT SCOL .  (34)

	.  reduce 34


state 82
	EXPR : EXPR ADD . EXPR  (56)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 119
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 83
	EXPR : EXPR SUB . EXPR  (57)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 120
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 84
	EXPR : EXPR MUL . EXPR  (58)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 121
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 85
	EXPR : EXPR DIV . EXPR  (59)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 122
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 86
	EXPR : EXPR EQ . EXPR  (60)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 123
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 87
	EXPR : EXPR NE . EXPR  (61)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 124
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 88
	EXPR : EXPR LT . EXPR  (62)

	INT_NUM  shift 32
	FLOAT_NUM  shift 33
	ID  shift 64
	ADD  shift 35
	SUB  shift 36
	LP  shift 37
	CHARACTER  shift 38
	NEG  shift 39
	.  error

	EXPR  goto 125
	UNARY_EXPR  goto 47
	PRIMARY_EXPR  goto 48
	UNARY_OP  goto 49
	CONST  goto 50
	FUNCTION_CALL  goto 54
	POSTFIX_EXPR  goto 55


state 89
	EXPR : EXPR GT . EXPR  (63)
